# CROP-3D

./: .gitignore  CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml  quick_start.py
checkpoints/: README.md
configs/: measurement.yaml  reconstruction.yaml  rendering.yaml
crop3d/phenotyping/light_interception/: README.md  calculate_light_interception.py  fit_ppfd_light_field.py  light_field_model.py  prepare_canopy_roi.py  run_region_batch.py
crop3d/phenotyping/plant_height/: measure_plant_height.py
crop3d/reconstruction/: align_colmap_apriltag_demo.py  convert_colmap_cameras_to_pinhole.py  prepare_da3_depth_demo.py  run_colmap_demo.py
crop3d/reconstruction/twodgs/: __init__.py  metrics.py  render.py  train.py  train_config.py
crop3d/visualization/: render_fixed_views_demo.py
data/: README.md
docs/: dataset.md  installation.md  light_interception.md  model_weights.md  plant_height.md  quick_start.md  reproduction.md
examples/light_interception_demo/: README.md
examples/light_interception_demo/five_regions/: region_comparison_setting_240.csv  region_comparison_setting_240.json
examples/light_interception_demo/input/: plant_local.ply  ppfd_light_field_model.pkl  roi_summary.json  standardized_ppfd.csv
examples/light_interception_demo/reference_output/: interception_summary.csv  interception_summary.json
examples/plant_height_demo/: README.md
examples/plant_height_demo/input/: plant_height_GT_demo.csv
examples/reconstruction_demo/: README.md
scripts/: run_light_interception_demo.py  run_plant_height_demo.py
(+72 files in other folders)
