[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crop3d-paper-artifact"
version = "0.1.0"
description = "Paper artifact for real-scene crop reconstruction and phenotyping demos."
requires-python = ">=3.10"
dependencies = [
  "matplotlib",
  "numpy",
  "openpyxl",
  "pandas",
  "plyfile",
  "scikit-learn",
  "scipy",
]

[tool.setuptools.packages.find]
include = [
  "crop3d*",
]
